Setup Google analytics & rap class

--- a/ZooZooZoo/Settings.bundle/Acknowledgements.plist
+++ b/ZooZooZoo/Settings.bundle/Acknowledgements.plist
@@ -65,6 +65,14 @@ THE SOFTWARE.
 		</dict>
 		<dict>
 			<key>FooterText</key>
+			<string>Copyright 2009 - 2015 Google, Inc. All rights reserved.</string>
+			<key>Title</key>
+			<string>GoogleAnalytics-iOS-SDK</string>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+		</dict>
+		<dict>
+			<key>FooterText</key>
 			<string>
 MIT License
 Copyright (c) 2013-present Jesse Squires
@@ -1014,6 +1022,14 @@ THE SOFTWARE.
 </string>
 			<key>Title</key>
 			<string>NCMB</string>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+		</dict>
+		<dict>
+			<key>FooterText</key>
+			<string>Copyright 2016 F@N Communications, Inc. All Rights Reserved.</string>
+			<key>Title</key>
+			<string>NendSDK_iOS</string>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 		</dict>
